# p6_ML_building_consumption

./: .gitignore  README.md  bentofile.yaml  onehotencoder.pkl  pyproject.toml  service.py
Notebooks/: building_consumption_analized.csv  building_consumption_columns_tracking.csv  exploration_donees.ipynb  modelistation_supervisee.ipynb  my_functions.py
