[tool.poetry]
name = "p6-machine-learning"
version = "0.1.0"
description = ""
authors = ["Maeva Beauvillain <m.berte@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.1"
pandas = "^2.2.3"
mlflow = "^2.19.0"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
scipy = "^1.15.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
